<resources>
    <string name="app_name">iPaym Payments</string>
    <string name="todo">TODO</string>
    <string name="do_t_have_an_account">Do\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="loading_text">Please wait..</string>
    <string name="rupee">₹</string>
    <string name="no_internet">No internet connection</string>
    <string name="please_wait">Please wait…</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="add_dialog">Add</string>
    <string name="refund_alert">Please confirm operator, number and amount, wrong recharge will not reverse at any circumstances.</string>
    <string name="enter_bill_number">Please enter the bill number</string>
    <string name="invalid_partner">Invalid Provider</string>
    <string name="enter_mobile_number">Please enter mobile number</string>
    <string name="select_provider">Please select provider</string>
    <string name="enter_biller_name">Please input biller name</string>
    <string name="enter_bill_amount">Please input bill amount</string>
    <string name="recharge_failed">Recharge Failed</string>
    <string name="bill_fetched">Bill Details Fetched Successfully</string>
    <string name="select_operator">Please Select Operator</string>
    <string name="recharge_confirmation">Recharge Confirmation</string>
    <string name="input_bill_amount">Please input bill amount</string>
    <string name="amout_validation">Please input bill amount greater than 10</string>
    <string name="confirm">Confirm</string>
    <string name="select_bank_title">Select Bank</string>
    <string name="select_provider_title">Select Provider</string>
    <string name="main_balance">Main Balance</string>
    <string name="aeps_balance">Aeps Balance</string>
    <string name="amount">Amount</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="provider">Provider</string>
    <string name="bill_number">Bill Number</string>
    <string name="enter_a_valid_bill_no_it_can_be_seen_at_the_top_of_you_bill">Enter a valid bill no.It can be seen at the top of you bill.</string>
    <string name="contact_number">Contact Number</string>
    <string name="enter_a_registred_contact_number">Enter a registred Contact Number</string>
    <string name="registred_contact_number_id">Registred Contact Number/ID</string>
    <string name="customer_name">Customer Name :</string>
    <string name="customer_name_not_found">Customer name not found!</string>
    <string name="due_date">Due Date :</string>
    <string name="due_date_not_found">Due date not found!</string>
    <string name="biller_name">Biller Name</string>
    <string name="date">Date</string>
    <string name="pay_now">Pay Now</string>
    <string name="verify">Verify</string>
    <string name="errorLog">Something went wrong in app send error log</string>
    <string name="validate">Validate</string>
</resources>
