<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <View
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:background="@drawable/sample_wave"
        android:layout_alignParentTop="true"
        android:rotation="180"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:background="@drawable/sample_wave_trans"
        android:layout_alignParentTop="true"
        android:rotation="180"
        android:layout_marginTop="8dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="false"
        android:layout_marginTop="110dp"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@drawable/app_logo"
            android:visibility="visible" />
    </androidx.cardview.widget.CardView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:padding="14dp"
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/amiko"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/usernameLayout"
        android:layout_marginTop="10sp"
        android:visibility="visible"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:padding="14dp"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiko"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@id/passwordLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg"
        android:ems="8"
        android:fontFamily="@font/amiko_bold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/text_size16"
        android:fontFamily="@font/amiko_semibold"
        android:text="Forgot Password ?"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:visibility="visible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_t_have_an_account"
            android:textSize="16sp"
            android:fontFamily="@font/amiko_semibold"/>
        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:textColor="#000000"
            android:fontFamily="@font/amiko_semibold"/>
    </LinearLayout>
</RelativeLayout>