<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F8F6F6"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:src="@drawable/ic_arrow"
                android:tint="@color/white" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/open_sans_semibold"
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:text="@string/provider"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/Gray">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/imgWallet"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:src="@drawable/wallet"
                android:tint="@color/Gray_DarkGray" />

            <LinearLayout
                android:id="@+id/mainCon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@id/imgWallet"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_midium"
                    android:text="@string/main_balance" />

                <TextView
                    android:id="@+id/tvBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"

                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondCon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/mainCon"
                android:gravity="left"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_midium"
                    android:text="@string/aeps_balance" />

                <TextView
                    android:id="@+id/tvAeps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"

                    android:textSize="18sp" />


            </LinearLayout>

            <ImageView
                android:id="@+id/imgSync"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rectangle_primary_border"
                android:padding="5dp"
                android:src="@drawable/sync_icon" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/con"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/con">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:padding="10dp"
                android:textColor="@color/txt_black"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/layoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".8"
                    android:text="@string/customer_name"
                    android:textColor="@color/txt_black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etCustomerName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1.2"
                    android:background="@drawable/border_bg"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:textColor="@color/txt_black"
                    android:textColorHint="@color/sub_txt_hint"
                    android:textSize="14sp"
                    android:theme="@style/RatingBar" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".8"
                    android:text="@string/due_date"
                    android:textColor="@color/txt_black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etDueDate"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1.2"
                    android:background="@drawable/border_bg"
                    android:focusable="false"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center_vertical"
                    android:hint="@string/due_date_not_found"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:textColor="@color/txt_black"
                    android:textColorHint="@color/sub_txt_hint"
                    android:textSize="14sp"
                    android:theme="@style/RatingBar" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/rectangle_primary_border"
                    android:gravity="center"
                    android:hint="@string/rupee"
                    android:maxLength="3"
                    android:paddingLeft="15dp"
                    android:paddingTop="14dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="14dp"
                    android:textColor="@color/txt_black"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/colorPrimary">

                    <EditText
                        android:id="@+id/etDueAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/amount"
                        android:includeFontPadding="false"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:paddingLeft="9dp"
                        android:paddingTop="14dp"
                        android:paddingRight="9dp"
                        android:paddingBottom="14dp"
                        android:textColor="@color/txt_black"
                        android:textColorHint="@color/sub_txt_hint"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottomLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="5"
                    android:background="@drawable/gray_button_bg"
                    android:fontFamily="@font/amiko_bold"
                    android:text="@string/pay_now"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>