<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="#E8FFFFFF"
    android:gravity="center_horizontal">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow"
                android:tint="@color/white"
                android:padding="12dp" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_toEndOf="@id/btnBack"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:textColor="@color/white"
                android:paddingLeft="15dp"
                android:text=""
                android:textSize="18sp"
                android:maxLines="1"
                android:ellipsize="end" />

            <TextView
                android:layout_toEndOf="@id/btnBack"
                android:layout_below="@id/tvTitle"
                android:id="@+id/tvTitleSub"
                android:layout_width="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amiko"
                android:textColor="@color/white"
                android:paddingLeft="15dp"
                android:text=""
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end" />
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/con"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/Gray">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/imgWallet"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:src="@drawable/wallet"
                android:tint="@color/Gray_DarkGray" />

            <LinearLayout
                android:id="@+id/mainCon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@id/imgWallet"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_midium"
                    android:text="@string/main_balance" />

                <TextView
                    android:id="@+id/tvBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"

                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondCon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/mainCon"
                android:gravity="left"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_midium"
                    android:text="@string/aeps_balance" />

                <TextView
                    android:id="@+id/tvAeps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"

                    android:textSize="18sp" />


            </LinearLayout>

            <ImageView
                android:id="@+id/imgSync"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/sync_icon"
                android:padding="5dp"
                android:background="@drawable/rectangle_primary_border"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/con"
        android:background="@color/colorPrimary"/>

    <ListView
        android:id="@+id/listView"
        android:descendantFocusability="beforeDescendants"
        android:layout_above="@id/btnFetchContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@id/divider"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"/>

    <LinearLayout
        android:id="@+id/btnFetchContainer"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F6F6F6">
        <Button
            android:id="@+id/btnFetch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/validate"
            android:textStyle="bold"
            android:layout_marginBottom="5dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/noData"
        android:layout_below="@+id/con"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:text="Something went wrong"
        android:gravity="center"
        android:paddingStart="20dp"
        android:textSize="20sp"
        android:fontFamily="serif-monospace"
        android:paddingEnd="20dp"
        android:visibility="gone"/>
</RelativeLayout>